--- a/firmware/Makefile.patch
+++ b/firmware/Makefile.patch
@@ -11,6 +11,9 @@ CPP=arm-none-eabi-g++
 LD=arm-none-eabi-gcc
 CP=arm-none-eabi-objcopy
 DMP=arm-none-eabi-objdump
+AR=arm-none-eabi-ar
+NM=arm-none-eabi-nm
+
 
 axoloti_runtime ?= ..
 axoloti_release ?= ..
@@ -49,17 +52,40 @@ LLIBDIR   = $(patsubst %,-L%,$(DLIBDIR) $(ULIBDIR))
            
 all: ${BDIR}/xpatch.bin
 
+#generate modules dependancy and link parameters
+#MODULE_LIBS = ${BDIR}/libtest.a
+#MODULE_LINK = -L{BDIR}/test -l ${BDIR}/libtest.a
+
+# MODULES (optionally) defined by Axo UI
+# MODULES = test
+
+$(info build modules MODULES = ${MODULES})
+
+MODULE_MAKEFILES := $(patsubst %,../modules/%/Makefile,$(MODULES))
+
+include $(MODULE_MAKEFILES)
+
+MODULE_INC = $(patsubst %,-I../modules/%,$(MODULES))
+MODULE_LIBS = $(patsubst %,${BDIR}/lib%.a,$(MODULES))
+#MODULE_LINKDIR = $(patsubst %,-L {BDIR}/% ,$(MODULES))
+MODULE_LINKDIR = -L$(BDIR)
+MODULE_LINKLIB = $(patsubst %,-l%,$(MODULES))
+
+$(info MODULE_INC  = ${MODULE_INC})
+$(info MODULE_LIBS = ${MODULE_LIBS})
+
 ${BDIR}/xpatch.h.gch: ${FIRMWARE}/xpatch.h ${FIRMWARE}/patch.h ${FIRMWARE}/axoloti.h ${FIRMWARE}/parameter_functions.h ${FIRMWARE}/axoloti_math.h ${FIRMWARE}/axoloti_filters.h
 	@echo "Build precompiled header"
 	$(CPP) $(CCFLAGS) $(IINCDIR) -Winvalid-pch -MD -MP -c ${FIRMWARE}/xpatch.h  -o ${BDIR}/xpatch.h.gch
 
-${BDIR}/xpatch.bin: ${BDIR}/xpatch.cpp ${BDIR}/xpatch.h.gch
+
+${BDIR}/xpatch.bin: ${BDIR}/xpatch.cpp ${MODULE_LIBS} ${BDIR}/xpatch.h.gch
 	@echo RM
 	@rm -f ${BDIR}/xpatch.o ${BDIR}/xpatch.elf ${BDIR}/xpatch.bin ${BDIR}/xpatch.d ${BDIR}/xpatch.map ${BDIR}/xpatch.lst
 	@echo APP
-	@$(CPP) $(CCFLAGS) -H $(IINCDIR) -Winvalid-pch -MD -MP --include ${BDIR}/xpatch.h -c ${BDIR}/xpatch.cpp -o ${BDIR}/xpatch.o 
+	@$(CPP) $(CCFLAGS) -H $(IINCDIR) $(MODULE_INC) -Winvalid-pch -MD -MP --include ${BDIR}/xpatch.h -c ${BDIR}/xpatch.cpp -o ${BDIR}/xpatch.o 
 	@echo LINK
-	@$(LD) $(LDFLAGS) ${BDIR}/xpatch.o -Wl,-Map=${BDIR}/xpatch.map,--cref,--just-symbols=${FIRMWARE}/build/axoloti.elf -o ${BDIR}/xpatch.elf
+	@$(LD) $(LDFLAGS) ${BDIR}/xpatch.o ${MODULE_LINKDIR} ${MODULE_LINKLIB} -Wl,-Map=${BDIR}/xpatch.map,--cref,--just-symbols=${FIRMWARE}/build/axoloti.elf -o ${BDIR}/xpatch.elf
 	@echo BIN
 #	$(CP) -O binary -j .text  -j .init_array -j .rodata -j .rodata\* xpatch.elf xpatch.bin
 #   -j .text.startup -j .text.memcpy  
