--- a/modules/test/Makefile
+++ b/modules/test/Makefile
@@ -14,6 +14,7 @@ MODLIB = lib${MODULE}.a
 
 $(info building ${MODULE})
 
+AWK=awk
 
 ${BDIR}/${MODLIB}: ../modules/${MODULE}/test.cpp
 	@rm -rf {BUILDDIR}
@@ -21,7 +22,5 @@ ${BDIR}/${MODLIB}: ../modules/${MODULE}/test.cpp
 	@$(CPP) $(CCFLAGS) -H $(IINCDIR) ${MODINC} -Winvalid-pch -MD -MP --include ${BDIR}/xpatch.h -c ${MODSRC} -o ${BUILDDIR}/test.o
 	@$(AR) rcs ${BDIR}/${MODLIB} ${BUILDDIR}/test.o
 	@$(NM) -g ${BDIR}/${MODLIB} > ${BUILDDIR}/defines.sym
-	@$(CP) --redefine-syms ../modules/${MODULE}/redefines.sym  ${BDIR}/${MODLIB} ${BDIR}/${MODLIB}
-
-	#@$(BDIR)/createsym ${MODULE} ${BUILDDIR}/defines.sym ${BUILDDIR}/redefines.sym
-	#@$(CP) --redefine-syms ${BUILDDIR}/redefines.sym  ${BDIR}/${MODLIB} ${BDIR}/${MODLIB}
+	@$(AWK) -v nspace="${MODULE}" -f ../firmware/createSym.awk < ${BUILDDIR}/defines.sym > ${BUILDDIR}/redefines.sym
+	@$(CP) --redefine-syms ${BUILDDIR}/redefines.sym ${BDIR}/${MODLIB} ${BDIR}/${MODLIB}
