--- a/firmware/Makefile.patch
+++ b/firmware/Makefile.patch
@@ -19,6 +19,7 @@ axoloti_firmware ?= ../firmware
 
 
 CHIBIOS = ${axoloti_release}/ChibiOS_16.1.7
+CHIBIOS_CONTRIB = $(CHIBIOS)/community
 CMSIS = ${axoloti_release}/CMSIS
 
 SPACE := 
@@ -34,8 +35,8 @@ $(info FIRMWARE = ${FIRMWARE})
 include board.mk
 include $(CHIBIOS)/os/common/ports/ARMCMx/compilers/GCC/mk/startup_stm32f4xx.mk
 # HAL-OSAL files (optional).
-include $(CHIBIOS)/os/hal/hal.mk
-include $(CHIBIOS)/os/hal/ports/STM32/STM32F4xx/platform.mk
+include $(CHIBIOS_CONTRIB)/os/hal/hal.mk
+include $(CHIBIOS_CONTRIB)/os/hal/ports/STM32/STM32F4xx/platform.mk
 include $(CHIBIOS)/os/hal/osal/rt/osal.mk
 # RTOS files (optional).
 include $(CHIBIOS)/os/rt/rt.mk
