--- a/firmware/Makefile.patch
+++ b/firmware/Makefile.patch
@@ -45,7 +45,7 @@ include $(CHIBIOS)/os/various/fatfs_bindings/fatfs.mk
 INCDIR = $(CMSIS)/Include $(CMSIS)/DSP_Lib/Include \
 		 $(PORTINC) $(KERNINC) $(TESTINC) \
          $(HALINC) $(PLATFORMINC) $(BOARDINC) $(FATFSINC) \
-         ${FIRMWARE} $(CHIBIOS) ${FIRMWARE}/mutable_instruments
+         ${FIRMWARE} $(CHIBIOS)
 
 # Paths
 IINCDIR   = $(patsubst %,-I%,$(INCDIR) $(DINCDIR) $(UINCDIR))
@@ -63,9 +63,8 @@ all: ${BDIR}/xpatch.bin
 $(info using MODULES = ${MODULES})
 
 MODULE_INC = $(patsubst %,-I../modules/%,$(MODULES))
-MODULE_LIBS = $(foreach MODULE, ${MODULES}, ${BDIR}/$(MODULE)/lib$(MODULE).a)
-#MODULE_LIBS = $(patsubst %,${BDIR}/%/lib%.a,$(MODULES))
-MODULE_LINKDIR = $(patsubst %,-L ${BDIR}/% ,$(MODULES))
+MODULE_LIBS = $(foreach MODULE, ${MODULES}, ${BDIR}/modules/$(MODULE)/lib$(MODULE).a)
+MODULE_LINKDIR = $(patsubst %,-L ${BDIR}/modules/% ,$(MODULES))
 MODULE_LINKLIB = $(patsubst %,-l%,$(MODULES))
 
 $(info MODULE_INC  = ${MODULE_INC})
