MSC sdcard mounter fixup

--- a/firmware/mounter/Makefile
+++ b/firmware/mounter/Makefile
@@ -20,7 +20,7 @@ endif
 
 # Enable this if you want the linker to remove unused code and data
 ifeq ($(USE_LINK_GC),)
-  USE_LINK_GC = yes
+  USE_LINK_GC = no
 endif
 
 # If enabled, this option allows to compile the application in THUMB mode.
@@ -30,7 +30,7 @@ endif
 
 # Enable this if you want to see the full log while compiling.
 ifeq ($(USE_VERBOSE_COMPILE),)
-  USE_VERBOSE_COMPILE = yes
+  USE_VERBOSE_COMPILE = no
 endif
 
 #
@@ -66,19 +66,19 @@ BUILDDIR = mounter_build
 
 # Imported source files and paths
 CHIBIOS = ${axoloti_release}/ChibiOS_16.1.7
-CHIBIOS_COMMUNITY = $(CHIBIOS)/community
+CHIBIOS_CONTRIB = $(CHIBIOS)/community
 
 include board.mk
 include $(CHIBIOS)/os/common/ports/ARMCMx/compilers/GCC/mk/startup_stm32f4xx.mk
-include $(CHIBIOS)/os/hal/hal.mk
-include $(CHIBIOS)/os/hal/ports/STM32/STM32F4xx/platform.mk
+include $(CHIBIOS_CONTRIB)/os/hal/hal.mk
+include $(CHIBIOS_CONTRIB)/os/hal/ports/STM32/STM32F4xx/platform.mk
 include $(CHIBIOS)/os/hal/osal/rt/osal.mk
 # RTOS files (optional).
 include $(CHIBIOS)/os/rt/rt.mk
 include $(CHIBIOS)/os/rt/ports/ARMCMx/compilers/GCC/mk/port_v7m.mk
 	
 # Define linker script file here
-LDSCRIPT= STM32F407xG.ld
+LDSCRIPT = ../STM32F427trojan.ld
 
 # C sources that can be compiled in ARM or THUMB mode depending on the global
 # setting.
@@ -94,7 +94,7 @@ CSRC = $(STARTUPSRC) \
        ../axoloti_control.c \
        ../axoloti_board.c \
        ../watchdog.c \
-       $(CHIBIOS_COMMUNITY)/os/various/lib_scsi.c \
+       $(CHIBIOS_CONTRIB)/os/various/lib_scsi.c \
        usbcfg.c \
        main.c  
 
@@ -126,14 +126,15 @@ TCPPSRC =
 # List ASM source files here
 ASMSRC = $(STARTUPASM) $(PORTASM) $(OSALASM)
 
-INCDIR = ../ \
+INCDIR =  \
          $(STARTUPINC) $(KERNINC) $(PORTINC) $(OSALINC) \
          $(HALINC) $(PLATFORMINC) $(BOARDINC) $(TESTINC) \
          $(FATFSINC) \
          $(CHIBIOS)/os/various \
          $(CHIBIOS)/os/hal/lib/streams \
          $(CHIBIOS)/community/os/hal/include \
-         $(CHIBIOS)/community/os/various/
+         $(CHIBIOS)/community/os/various/ \
+         ../
 
 #
 # Project, sources and paths
