code cleanup, ui rework

--- a/firmware/Makefile
+++ b/firmware/Makefile
@@ -5,7 +5,7 @@
 
 # Compiler options here.
 ifeq ($(USE_OPT),)
-  USE_OPT = -O2 -ggdb -fomit-frame-pointer -falign-functions=16 -fno-math-errno -Wno-unused-parameter
+  USE_OPT = -O2 -ggdb -fomit-frame-pointer -falign-functions=16 -fno-math-errno
 endif
 
 # C specific options here (added to USE_OPT).
@@ -409,7 +409,7 @@ AOPT =
 TOPT = -mthumb -DTHUMB
 
 # Define C warning options here
-CWARN = -Wall -Wextra -Wstrict-prototypes
+CWARN = -Wall -Wextra -Wstrict-prototypes -Wno-unused-parameter -Wno-strict-aliasing
 
 # Define C++ warning options here
 CPPWARN = -Wall -Wextra
