--- a/firmware/Makefile
+++ b/firmware/Makefile
@@ -218,6 +218,7 @@ CSRC = $(STARTUPSRC) \
        ${FIRMWARE}/patch.c \
        ${FIRMWARE}/flash.c \
        ${FIRMWARE}/virtual_control.c \
+       ${FIRMWARE}/midi_buffer.c \
        ${CMSIS}/DSP_Lib/Source/FastMathFunctions/arm_cos_q31.c \
        ${CMSIS}/DSP_Lib/Source/FastMathFunctions/arm_sin_q31.c \
        ${CMSIS}/DSP_Lib/Source/CommonTables/arm_common_tables.c \
